Product:gradient panel view BugID:N Description:查看ProcessView2，ObjectAnimator Unit Test:N
Module:

Product:

BugID:

Description:

Unit Test:

Change-Id: Ic8b019ba03e3589044aa83b32548f787c9678df6
Signed-off-by: rongtian

--- a/app/src/main/java/com/example/thinkpad/t47checklisthead/view/dashboard.tt
+++ b/app/src/main/java/com/example/thinkpad/t47checklisthead/view/dashboard.tt
@@ -153,7 +153,7 @@ public class DashBoardProgressView extends FrameLayout {
             * <p>Causes the Runnable to be added to the message queue.
             * The runnable will be run on the user interface thread.</p>
             * 使用了post后，run()中的代码会提前加载到message queue,提前于onDraw()方法的
-            * 执行,以初始化一些数据，有些数据数据是onMeasure()方法中返回的，不这么做的话无法
+            * 执行,以初始化一些数据，有些数据??数据是onMeasure()方法中返回的，不这么做的话无法
             * 计算比例以适配大小
             * */
             post(new Runnable() {
