--- a/app/src/main/res/layout/activity_main5_panel.xml
+++ b/app/src/main/res/layout/activity_main5_panel.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="com.example.thinkpad.t47checklisthead.MainActivity">
 
-    <com.example.thinkpad.t47checklisthead.view.ProcessView2
+    <com.example.thinkpad.t47checklisthead.view.ProcessView
         android:id="@+id/my_custom_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
