--- a/app/src/main/res/layout/activity_main5_panel.xml
+++ b/app/src/main/res/layout/activity_main5_panel.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="com.example.thinkpad.t47checklisthead.MainActivity">
 
-    <com.example.thinkpad.t47checklisthead.view.ProcessView
+    <com.example.thinkpad.t47checklisthead.view.FlexiblePanelView
         android:id="@+id/my_custom_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,10 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-
         android:max="100"
-        android:progress="0"
-        android:layout_alignParentBottom="true"
+        android:progress="20"
+        android:layout_alignParentTop="true"
         />
 
 
