--- a/app/src/main/res/layout/activity_main5_panel.xml
+++ b/app/src/main/res/layout/activity_main5_panel.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.thinkpad.t47checklisthead.MainActivity">
+>
 
     <com.example.thinkpad.t47checklisthead.view.FlexiblePanelView
-        android:id="@+id/my_custom_view"
+        android:id="@+id/my_custom_view1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:background="#88888888"
-
         />
     <SeekBar
         android:id="@+id/seek_bar"
