--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,27 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.example.thinkpad.t47checklisthead.MainActivity">
 
-    <com.example.thinkpad.t47checklisthead.view.panelview
-        android:id="@+id/my_custom_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:background="#000000"
-        app:panelSize="200dp"
-
-       />
-    <SeekBar
-        android:id="@+id/seek_bar_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:max="100"
-        android:progress="0"
-        android:layout_below="@+id/my_custom_view"
-        />
+<Button
+    android:id="@+id/two_btn_style_id"
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:background="@drawable/bg_vectorbutton"
+    android:text="Two Caps?"
+    android:padding="2dp"
+    android:textColor="@color/colorPrimary"
+    android:textAllCaps="false"
+    />
 
 
 </RelativeLayout>
