--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     tools:context="com.example.thinkpad.t47checklisthead.MainActivity">
 
 <Button
@@ -16,7 +15,17 @@
     android:padding="2dp"
     android:textColor="@color/colorPrimary"
     android:textAllCaps="false"
+    android:layout_centerHorizontal="true"
+
     />
+    <LinearLayout
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_x"
+        android:layout_below="@+id/two_btn_style_id"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="30dp"
+        ></LinearLayout>
 
 
 </RelativeLayout>
