--- a/app/src/main/res/drawable/bg_shape_button.xml
+++ b/app/src/main/res/drawable/bg_shape_button.xml
@@ -3,6 +3,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
+    <solid android:color="@color/colorPrimary"/>
     <!--how about set size here-->
     <!--prove useless size setting-->
 
