--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.thinkpad.t47checklisthead.MainActivity">
 
 <Button
-    android:id="@+id/two_btn_style_id"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:background="@drawable/bg_vectorbutton"
-    android:text="Two Caps?"
-    android:padding="2dp"
-    android:textColor="@color/colorPrimary"
-    android:textAllCaps="false"
-    android:layout_centerHorizontal="true"
-
+    android:id="@+id/btn_open_thread"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="create handler"
     />
-    <LinearLayout
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/ic_x"
-        android:layout_below="@+id/two_btn_style_id"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="30dp"
-        ></LinearLayout>
+<Button
+    android:id="@+id/btn_open_thread2"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="send msg"/>
 
-
-</RelativeLayout>
+</LinearLayout>
