--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,18 @@
     android:orientation="vertical"
     tools:context="com.example.thinkpad.t47checklisthead.MainActivity">
 
-<Button
-    android:id="@+id/btn_open_thread"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="create handler"
-    />
-<Button
-    android:id="@+id/btn_open_thread2"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="send msg"/>
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@android:drawable/edit_text" />
+
+    <TextView
+        android:id="@+id/promt"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:singleLine="false"
+        android:text="nfc waiting" />
 
 </LinearLayout>
