--- a/app/src/main/res/layout/fragment_walking.xml
+++ b/app/src/main/res/layout/fragment_walking.xml
@@ -81,6 +81,16 @@
                 app:layout_constraintEnd_toEndOf="@+id/y"
                 app:layout_constraintStart_toStartOf="@+id/y"
                 app:layout_constraintTop_toBottomOf="@+id/y" />
+            <com.example.thinkpad.t47checklisthead.view.SplineChart01View
+                android:id="@+id/spline_chart_view"
+                android:layout_width="0dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/z"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                />
+
 
 
         </android.support.constraint.ConstraintLayout>
