### 18.5 多册测试普通broadcast receiver 也失败，估计product flavor问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,5 +26,6 @@
         android:layout_below="@+id/edit_msg"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
+        android:onClick="sendBroadcast"
         android:text="Broadcast Message"/>
 </RelativeLayout>
