添加dex 动态加载机制；参考：https://blog.csdn.net/wy353208214/article/details/50859422

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,4 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    tools:context=".MainActivity"/>
+    android:layout_gravity="center_vertical"
+    tools:context=".MainActivity">
+    <Button
+        android:id="@+id/tx"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="load class!!"/>
+</FrameLayout>
